css/style.css
/* Page */
.page {
	--back-color: #ffffff;
	--prime-color: initial;
	--second-color: initial;
	--accent-color: #000000;
	--accent-color-2: #84cffa80;
	color: var(--prime-color, revert);
	background-color: var(--back-color);
	position: relative;
	font-size: calc(18rem / 16);
	margin: 0;
	padding: 0 1vw;
	padding-bottom: 2em;
	font-family: sans-serif;
}

/* Dark Theme */
.page.dark {
	--back-color: #002B36;
	--prime-color: #c3d5d9;
	--second-color: #a0b2b5;
	--accent-color: #2f93da;
	--accent-color-2: #84cffa80;
}

@supports (display:grid) {
	.page {
		display: grid;
		grid-template-columns: 1fr 1fr minmax(auto, 50rem) minmax(auto, 12.6rem) 2fr;
	}
}

@media screen and (max-width: 76.25rem) {
	.page {
		grid-template-columns: 1fr 1fr minmax(auto, 50rem) 1fr 1fr;
	}
}

/* .header */
.header {
	color: var(--prime-color, revert);
	padding: 2em 0 1em;
	grid-column: 3 / 4;
	grid-row: 1 / 2;
	text-align: center;
}

@media (max-width: 855px) {
	.header {
		padding: 2em 2vw;
	}
}

.header a {
	text-decoration: underline;
}

.header__heading {
	grid-column: 1/2;
	font-size: 4.5em;
	margin-top: 0;
	margin-bottom: 0.1em;
	word-wrap: break-word;
	hyphens: auto;
}

@media (max-width: 855px) {
	.header__heading {
		font-size: clamp(2rem, 9.1vw, 5rem);
	}
}

.header__sub-heading {
	grid-column: 1/3;
	display: block;
	font-size: 1.4em;
	margin-bottom: 1em;
}

.author,
.feedback {
	grid-column: 1/3;
	font-size: 1em;
	display: block;
	text-align: left;
}

.author {
	margin-bottom: 0.1em;
}

.feedback {
	margin-bottom: 1em;
}

.header__ui {
	grid-column: 1/2;
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
}

.locales {
	display: flex;
	flex-wrap: wrap;
	align-items: baseline;
	margin-bottom: 1em;
}

.locales::after {
	order: 2;
	content: '/';
	display: inline-block;
	font-weight: bold;
	margin: 0 0.5em;
}

.locales__lang {
	position: relative;
	font-weight: 600;
	text-decoration: none;
}

.locales__lang_ru {
	order: 1;
}

.locales__lang_en {
	order: 3;
}

.theme {
	margin-bottom: 0;
}

.themes__link_light {
	margin-right: 0.5em;
}

.themes__link_light::before {
	content: '☀️ ';
	display: inline-block;
}

.themes__link_dark::before {
	content: '🌘 ';
	display: inline-block;
}

/* Contents */
.contents {
	padding-left: 1.5em;
	padding-right: 0.1em;
	grid-column: 4 / 5;
	grid-row: 2 / 3;
	justify-self: left;
	align-self: start;
	scrollbar-width: thin;
}

@supports (display:grid) {
	.contents {
		position: sticky;
		top: 1em;
		overflow: auto;
		height: 100vh;
	}
}

@media screen and (max-width: 76.25rem) {
	.contents {
		position: static;
		grid-column: 3 / 4;
		padding: 2em 0 0 2em;
		height: unset;
	}
}

.contents__heading {
	font-size: 1.3em;
	margin-top: 0;
	margin-bottom: 0.4em;
}

.contents__heading-link {
	color: var(--accent-color);
	line-height: 1.2;
	font-weight: normal;
}

.contents__heading-link:visited {
	color: var(--accent-color);
}

.contents__heading-link:hover::after {
	position: absolute;
	content: '\23EB';
}

.contents__fold {
	display: flex;
	align-items: center;
	margin-bottom: 0.4em;
	font-size: 0.9em;
	cursor: pointer;
	user-select: none;
}

.contents__fold::before {
	content: '';
	display: block;
	width: 1em;
	height: 1em;
	font-size: 2rem;
	margin-top: 1px;
	margin-right: 0.2em;
	background-image: url('../img/eye-open.svg');
	background-repeat: no-repeat;
	background-size: 100% 100%;
}

.fold_folded::before {
	background-image: url('../img/eye-close.svg');
}

.fold__title {
	display: flex;
}

.contents__list {
	list-style: none;
	margin-top: 0;
	padding-left: 0;
	font-size: 1rem;	
}

.contents__title {
	display: flex;
	align-items: center;
}

.list__fold-button {
	display: inline-block;
	padding: 0;
	width: 1.6em;
	height: 2em;
	vertical-align: super;
	margin-right: 0.2em;
	background-color: transparent;
	border: none;
	background-image: url('../img/fold-arrow.svg');
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;
}

.contents__list a {
	display: inline-block;
	font-size: 1.1em;
	line-height: 1.4;
}

.list__fold-button_folded {
	transform: rotate(-90deg);
}

.contents__topics {
	list-style: none;
	font-size: 0.9em;
	padding-left: 1.9em;
	margin-left: 1.5em;
}

.contents__topics a {
	position: relative;
	padding-left: 0.2em;
}

/* Main */
.main {
	max-width: 80ch;
	margin: 0 auto;
	position: relative;
	box-sizing: border-box;
	border-radius: 5px;
	box-shadow: 2px 4px 17px -5px #b3b3b3;
	margin-bottom: 0.4em;
	grid-column: 3 / 4;
}

/* Parts */
.part {
	grid-column: 3 / 4;
}

.part:first-of-type {
	padding-top: 1.5em;
}

.part__heading {
	text-align: center;
	text-transform: uppercase;
	font-size: 1em;
	letter-spacing: 0.1em;
	padding: 0 2vw;
	margin-top: 0;
	margin-bottom: 1.5em;
	scroll-margin-top: 1em;
	scroll-snap-margin-top: 1em;
}

/* Sections */
.topic {
	position: relative;
	margin-bottom: 1.5em;
	padding: 0 2vw;
}

.topic__heading {
	font-weight: normal;
	font-size: 1.5em;
	margin-top: 0;
	margin-bottom: 0.4em;
	line-height: 1.2;
	scroll-margin-top: 0.5em;
	scroll-snap-margin-top: 0.5em;
}

.topic__heading > a {
	color: var(--accent-color);
	line-height: 1.2;
}

.topic__heading > a:visited {
	color: var(--accent-color);
}

h2:target,
h4:target,
.topic__heading:target {
	background-color: var(--accent-color-2);
	transition: scroll-behavior 0.3s ease-out;
}

.dark h2:target,
.dark h4:target,
.dark .topic__heading:target {
	background-color: initial;
	outline: 2px solid var(--accent-color-2);
}

.topic__section {
	margin-bottom: 1em;
}

.topic__section:last-of-type {
	margin-bottom: 0;
}

p {
	color: var(--second-color, revert);
	font-size: 1em;
}

p:last-child {
	margin-bottom: 0;
}

.tip {
	cursor: help;
}

h3, h4 {
	color: var(--accent-color);
	font-weight: normal;
	font-size: 1.1em;
	margin-top: 0;
	margin-bottom: 0.4em;
	line-height: 1;
	scroll-margin-top: 0.5em;
	scroll-snap-margin-top: 0.5em;
}

ul {
	margin-top: 0;
	margin-bottom: 0;
	padding-left: 1em;
}

li {
	color: var(--second-color, revert);
	line-height: 1.4;
}

a {
	color: var(--prime-color, revert);
	font-size: 1em;
	text-decoration: none;
	line-height: 1.4;
}

a:hover {
	text-decoration: underline;
}

/* Footer */
.footer {
	color: var(--prime-color, revert);
	grid-column: 3 / 4;
	grid-row: 3 / 4;
	padding: 1em 0;
	text-align: center;
}

@media screen and (max-width: 76.25rem) {
	.footer {
		grid-row: 4 / 5;
	}
}

.copyright {
	font-size: 0.8em;
}

/* JS */
.visually-hidden {
	border: 0;
	clip: rect(0 0 0 0);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	left: 0;
}

/* Contents - emoji */
.contents__topics a::before {
	position: absolute;
	left: -1.5em;
	display: inline-block;
	width: 100%;
}

.topic__heading a::after {
	margin-left: 0.2em;
}

.topic__heading a[href="#roadmap"]::after {
	content: '📅';
}
.contents__topics a[href="#roadmap"]::before {
	content: '🗺️';
}
.topic__heading a[href="#manuals"]::after,
.contents__topics a[href="#manuals"]::before {
	content: '📖';
}
.topic__heading a[href="#reference"]::after,
.contents__topics a[href="#reference"]::before {
	content: '📒';
}
.topic__heading a[href="#resources"]::after,
.contents__topics a[href="#resources"]::before {
	content: '🧱';
}
.topic__heading a[href="#html"]::after,
.contents__topics a[href="#html"]::before {
	content: '📄';
}
.topic__heading a[href="#layout"]::after,
.contents__topics a[href="#layout"]::before {
	content: '📱';
}
.topic__heading a[href="#fonts"]::after,
.contents__topics a[href="#fonts"]::before {
	content: '🅱️';
}
.topic__heading a[href="#js"]::after,
.contents__topics a[href="#js"]::before {
	content: '🚀';
}
.topic__heading a[href="#backend"]::after,
.contents__topics a[href="#backend"]::before {
	content: '⚙️';
}
.topic__heading a[href="#soft"]::after,
.contents__topics a[href="#soft"]::before {
	content: '💻';
}
.topic__heading a[href="#tools"]::after,
.contents__topics a[href="#tools"]::before {
	content: '🛠️';
}
.topic__heading a[href="#qa"]::after,
.contents__topics a[href="#qa"]::before {
	content: '🔬';
}
.topic__heading a[href="#access"]::after,
.contents__topics a[href="#access"]::before {
	content: '😊';
}
.topic__heading a[href="#safe"]::after,
.contents__topics a[href="#safe"]::before {
	content: '🔒';
}
.topic__heading a[href="#speed"]::after,
.contents__topics a[href="#speed"]::before {
	content: '⏱️';
}
.topic__heading a[href="#git"]::after,
.contents__topics a[href="#git"]::before {
	content: '🐙';
}
.topic__heading a[href="#bem"]::after,
.contents__topics a[href="#bem"]::before {
	content: '🧰';
}
.topic__heading a[href="#build"]::after,
.contents__topics a[href="#build"]::before {
	content: '🏗️';
}
.topic__heading a[href="#auto"]::after,
.contents__topics a[href="#auto"]::before {
	content: '🤖';
}
.topic__heading a[href="#linters"]::after,
.contents__topics a[href="#linters"]::before {
	content: '☑️';
}
.topic__heading a[href="#news"]::after,
.contents__topics a[href="#news"]::before {
	content: '🔖';
}
.topic__heading a[href="#video"]::after,
.contents__topics a[href="#video"]::before {
	content: '📺';
}
.topic__heading a[href="#qna"]::after,
.contents__topics a[href="#qna"]::before {
	content: '🦉';
}
.topic__heading a[href="#work"]::after,
.contents__topics a[href="#work"]::before {
	content: '🗂️';
}
.topic__heading a[href="#seo"]::after,
.contents__topics a[href="#seo"]::before {
	content: '📈';
}
.topic__heading a[href="#design"]::after,
.contents__topics a[href="#design"]::before {
	content: '🤹';
}
.topic__heading a[href="#text"]::after,
.contents__topics a[href="#text"]::before {
	content: '📝';
}
.topic__heading a[href="#bad"]::after,
.contents__topics a[href="#bad"]::before {
	content: '💩';
}
.topic__heading a[href="#roadmap"]::after,
.contents__topics_default {
	list-style: disc;
}

